# obsidian-brain

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/commands/: ask-save.md  ask.md  collect-assets-dry.md  collect-assets.md  compile-all.md  compile-dry.md  compile.md  connect-obsidian-brain.md  flush.md  lint-structural.md  lint.md  setup.md  transcript.md
.claude/skills/kb-ask/: SKILL.md
.claude/skills/kb-ask-save/: SKILL.md
.claude/skills/kb-collect-assets/: SKILL.md
.claude/skills/kb-collect-assets-dry/: SKILL.md
.claude/skills/kb-compile/: SKILL.md
.claude/skills/kb-compile-all/: SKILL.md
.claude/skills/kb-compile-dry/: SKILL.md
.claude/skills/kb-flush/: SKILL.md
.claude/skills/kb-lint/: SKILL.md
.claude/skills/kb-lint-structural/: SKILL.md
.claude/skills/kb-setup/: SKILL.md
.claude/skills/kb-transcript/: SKILL.md
docs/superpowers/specs/: 2026-04-25-lilygaripovarealestate-brain-design.md
hooks/: session-end.py  session-start.py
scripts/: backfill-summaries.py  collect-assets.py  compile.py  config.py  extract-papers.py  flush.py  link-content.py  lint.py  migrate-summaries.py  monitor_serp.py  pdf-to-md.py  query.py  rtf-to-md.py  serp_capture.py  serp_parse.py  setup.sh  sync.py  transcribe-channel.py  transcript.py  utils.py
tests/: test_serp_parse.py
tests/fixtures/: serp_ai_overview_lily_first.html  serp_ai_overview_no_lily.html  serp_no_ai_overview.html
